# genezip

./: Cargo.toml  README.md  out.gzp  out.gzp.gzpky  test.genome
.github/workflows/: rust.yml
src/: lib.rs  main.rs  zip.rs
src/huffman/: mod.rs  tests.rs  tree.rs
