[package]
name = "genezip"
version = "0.1.0"
edition = "2021"
authors = ["Braden Everson <bradeneverson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An encoding CLI tool for compressing and decompressing raw genome information"
homepage = "https://github.com/BradenEverson/genezip"
repository = "https://github.com/BradenEverson/genezip"
keyworks = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
